// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Media page should render active media 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    style="padding-right: 0px; overflow: hidden;"
  >
    <div
      aria-hidden="true"
    >
      <div
        class="Tabs-root-290"
      >
        <div
          class="Tabs-TabsBar-296"
        >
          <div
            class="Container-root-300"
          >
            <div
              class="MuiContainer-root Tabs-ContainerRoot-291"
            >
              <div
                class="MuiTabs-root Tabs-TabsRoot-292"
              >
                <div
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiTabScrollButton-root tabsScrollBtn Mui-disabled"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z"
                    />
                  </svg>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
                <div
                  class="MuiTabs-scrollable"
                  style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
                />
                <div
                  class="MuiTabs-scroller MuiTabs-scrollable"
                  style="margin-bottom: 0px;"
                >
                  <div
                    aria-label="tabs"
                    class="MuiTabs-flexContainer"
                    role="tablist"
                  />
                  <span
                    class="PrivateTabIndicator-root-366 PrivateTabIndicator-colorPrimary-367 MuiTabs-indicator"
                    style="left: 0px; width: 0px;"
                  />
                </div>
                <div
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiTabScrollButton-root tabsScrollBtn Mui-disabled"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"
                    />
                  </svg>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      role="presentation"
      style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
    >
      <div
        aria-hidden="true"
        class="backdrop"
        style="z-index: -1; position: fixed; right: 0px; bottom: 0px; top: 0px; left: 0px; background-color: rgba(0, 0, 0, 0.5);"
      />
      <div
        data-test="sentinelStart"
        tabindex="0"
      />
      <div
        class="ColorPair-root-302 ColorPair-white-303"
        style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        tabindex="-1"
      >
        <div
          class="Dialog-root-276 Dialog-bg-white-283 Dialog-width-lg-288 modal makeStyles-paper-275"
        >
          <div
            class="Dialog-header-277"
          >
            <button
              aria-label="Close"
              class="MuiButtonBase-root MuiIconButton-root IconButton-root-339 iconButton IconButton-medium-345 IconButton-text-341 Dialog-iconButton-279"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
          <div
            class="Carousel-wrapper-352"
          >
            <div
              class="Carousel-root-348 Carousel-swipable-357"
              data-testid="carousel"
            >
              <div
                style="overflow-x: hidden;"
              >
                <div
                  class="react-swipeable-view-container"
                  style="flex-direction: row; transition: all 0s ease 0s; direction: ltr; display: flex; will-change: transform;"
                >
                  <div
                    aria-hidden="false"
                    class="Carousel__slide--global"
                    data-swipeable="true"
                    style="width: 100%; flex-shrink: 0; overflow: auto;"
                  >
                    <div
                      class="Carousel-page-351"
                    >
                      <div
                        class="Carousel-slide-349 slide"
                        data-test-class-name="slide"
                        style="width: 100%;"
                      >
                        <div>
                          <div
                            class="mediaHeader"
                          >
                            <h6
                              class="MuiTypography-root mediaTitle Typography-root-358 MuiTypography-subtitle2 MuiTypography-displayBlock"
                              data-testid="typography"
                            >
                              Megatest / mediaTool
                            </h6>
                          </div>
                          <div>
                            <div
                              class="iframeBackground"
                            >
                              <svg
                                color="primary"
                                style="height: 360px;"
                                viewBox="0 0 250 250"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M0 0h250v250H0z"
                                  fill="#009fe3"
                                />
                                <g
                                  fill="#fff"
                                >
                                  <path
                                    d="M155.393 86.416 144.565 131h-.212l-10.829-44.584H100.3v50.634c-.76-9.718-6.732-14.589-13.079-16.771 5.626-3.078 9.342-7.218 9.342-14.862 0-7.749-4.247-19-24.2-19H30.848v75.8h42.994c12.786 0 25.368-7.183 26.455-21.075v21.075h22.081V113.6h.212l13.164 48.62h17.41l13.163-48.62h.213v48.62h22.081v-75.8ZM54.2 104.461h12.317c4.777 0 7.962 1.381 7.962 5.2 0 4.884-3.079 6.264-7.962 6.264H54.2Zm13.694 39.7H54.2v-14.115h14.652c5.521 0 8.174 2.442 8.174 6.9 0 5.839-4.246 7.219-9.126 7.219ZM195.798 86.416h23.355v75.797h-23.355z"
                                  />
                                </g>
                              </svg>
                            </div>
                            <iframe
                              allow="autoplay; fullscreen; picture-in-picture"
                              allowfullscreen=""
                              class="iframe test"
                              data-testid="iframe-element"
                              frameborder="0"
                              height="360"
                              sandbox="allow-scripts allow-same-origin"
                              src="https://player.vimeo.com/video/www.vimeo.com"
                              width="640"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <button
            class="MuiButtonBase-root MuiIconButton-root IconButton-root-339 iconButton IconButton-medium-345 IconButton-text-341 carouselControl carouselControl--previous"
            data-testid="carousel-prev-button"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root arrow"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M15.41 16.59L10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
          <button
            class="MuiButtonBase-root MuiIconButton-root IconButton-root-339 iconButton IconButton-medium-345 IconButton-text-341 carouselControl carouselControl--next"
            data-testid="carousel-next-button"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root arrow"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
      <div
        data-test="sentinelEnd"
        tabindex="0"
      />
    </div>
  </body>,
  "container": <div
    aria-hidden="true"
  >
    <div
      class="Tabs-root-290"
    >
      <div
        class="Tabs-TabsBar-296"
      >
        <div
          class="Container-root-300"
        >
          <div
            class="MuiContainer-root Tabs-ContainerRoot-291"
          >
            <div
              class="MuiTabs-root Tabs-TabsRoot-292"
            >
              <div
                aria-disabled="false"
                class="MuiButtonBase-root MuiTabScrollButton-root tabsScrollBtn Mui-disabled"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z"
                  />
                </svg>
                <span
                  class="MuiTouchRipple-root"
                />
              </div>
              <div
                class="MuiTabs-scrollable"
                style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
              />
              <div
                class="MuiTabs-scroller MuiTabs-scrollable"
                style="margin-bottom: 0px;"
              >
                <div
                  aria-label="tabs"
                  class="MuiTabs-flexContainer"
                  role="tablist"
                />
                <span
                  class="PrivateTabIndicator-root-366 PrivateTabIndicator-colorPrimary-367 MuiTabs-indicator"
                  style="left: 0px; width: 0px;"
                />
              </div>
              <div
                aria-disabled="false"
                class="MuiButtonBase-root MuiTabScrollButton-root tabsScrollBtn Mui-disabled"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"
                  />
                </svg>
                <span
                  class="MuiTouchRipple-root"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Media page should render media page 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="Tabs-root-1"
      >
        <div
          class="Tabs-TabsBar-7"
        >
          <div
            class="Container-root-11"
          >
            <div
              class="MuiContainer-root Tabs-ContainerRoot-2"
            >
              <div
                class="MuiTabs-root Tabs-TabsRoot-3"
              >
                <div
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiTabScrollButton-root tabsScrollBtn Mui-disabled"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z"
                    />
                  </svg>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
                <div
                  class="MuiTabs-scrollable"
                  style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
                />
                <div
                  class="MuiTabs-scroller MuiTabs-scrollable"
                  style="margin-bottom: 0px;"
                >
                  <div
                    aria-label="tabs"
                    class="MuiTabs-flexContainer"
                    role="tablist"
                  >
                    <button
                      aria-controls="tabpanel-2RdhIZRj7BuTDbC2eO2vQp"
                      aria-selected="true"
                      class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Tabs-TabRoot-4 Mui-selected"
                      data-testid="tab-2RdhIZRj7BuTDbC2eO2vQp"
                      id="tab-2RdhIZRj7BuTDbC2eO2vQp"
                      role="tab"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiTab-wrapper"
                      />
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                  <span
                    class="PrivateTabIndicator-root-13 PrivateTabIndicator-colorPrimary-14 MuiTabs-indicator"
                    style="left: 0px; width: 0px;"
                  />
                </div>
                <div
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiTabScrollButton-root tabsScrollBtn Mui-disabled"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"
                    />
                  </svg>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-labelledby="tab-2RdhIZRj7BuTDbC2eO2vQp"
          class="MuiGrid-root Tabs-TabPanel-5 MuiGrid-item"
          data-testid="tabpanel-2RdhIZRj7BuTDbC2eO2vQp"
          id="tabpanel-2RdhIZRj7BuTDbC2eO2vQp"
          role="tabpanel"
        >
          <div
            class="MuiBox-root MuiBox-root-19 Tabs-TabPanelBox-6"
          >
            <nav
              aria-label="breadcrumbs"
              class="MuiTypography-root MuiBreadcrumbs-root Breadcrumbs-root-20 MuiTypography-body1 MuiTypography-colorTextSecondary"
            >
              <ol
                class="MuiBreadcrumbs-ol"
              >
                <li
                  class="MuiBreadcrumbs-li"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root Button-root-28 MuiButton-text Button-text-29 Breadcrumbs-button-22 Breadcrumbs-link-23 MuiButton-textPrimary"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label Button-label-31"
                    >
                      <span
                        class="MuiButton-startIcon Button-startIcon-32 MuiButton-iconSizeMedium"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root Breadcrumbs-icon-24"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
                          />
                        </svg>
                      </span>
                      <span
                        class="Breadcrumbs-label-25"
                      >
                        <div
                          aria-role="button"
                          data-testid="media-path-navigate"
                          role="button"
                        >
                          Megatest
                        </div>
                      </span>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </li>
              </ol>
            </nav>
            <div
              class="mediaGrid"
            >
              <div
                class="meta"
              >
                <h6
                  class="MuiTypography-root Typography-root-48 MuiTypography-subtitle2 MuiTypography-displayBlock"
                  data-testid="typography"
                >
                  countIndicator
                </h6>
              </div>
              <div>
                <div
                  class="tiles"
                >
                  <div>
                    <div
                      class="content"
                    >
                      <button
                        class="MuiButtonBase-root MuiCardActionArea-root"
                        data-testid="media-tile-element-2"
                        tabindex="0"
                        type="button"
                      >
                        <div
                          class="outlined"
                        >
                          <div
                            class="MuiCardContent-root content"
                          >
                            <div>
                              <iframe
                                class="iframe test"
                                frameborder="0"
                                height="100%"
                                sandbox="allow-scripts allow-same-origin"
                                scrolling="yes"
                                src="https://player.vimeo.com/video/www.vimeo.com?title=0&portrait=0&controls=0&sidedock=0"
                                width="100%"
                              />
                              <div
                                class="playButton"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root MuiSvgIcon-colorPrimary"
                                  focusable="false"
                                  style="font-size: 2rem; display: block;"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="M8 5v14l11-7z"
                                  />
                                </svg>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="footer"
                        >
                          <span
                            class="MuiTypography-root title Typography-root-48 MuiTypography-button"
                            data-testid="typography"
                          >
                            mediaTool
                          </span>
                          <span
                            class="MuiTypography-root meta Typography-root-48 MuiTypography-button"
                            data-testid="typography"
                          >
                            contentTypes.VIDEO
                          </span>
                        </div>
                        <span
                          class="MuiCardActionArea-focusHighlight"
                        />
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="Tabs-root-1"
    >
      <div
        class="Tabs-TabsBar-7"
      >
        <div
          class="Container-root-11"
        >
          <div
            class="MuiContainer-root Tabs-ContainerRoot-2"
          >
            <div
              class="MuiTabs-root Tabs-TabsRoot-3"
            >
              <div
                aria-disabled="false"
                class="MuiButtonBase-root MuiTabScrollButton-root tabsScrollBtn Mui-disabled"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z"
                  />
                </svg>
                <span
                  class="MuiTouchRipple-root"
                />
              </div>
              <div
                class="MuiTabs-scrollable"
                style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
              />
              <div
                class="MuiTabs-scroller MuiTabs-scrollable"
                style="margin-bottom: 0px;"
              >
                <div
                  aria-label="tabs"
                  class="MuiTabs-flexContainer"
                  role="tablist"
                >
                  <button
                    aria-controls="tabpanel-2RdhIZRj7BuTDbC2eO2vQp"
                    aria-selected="true"
                    class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Tabs-TabRoot-4 Mui-selected"
                    data-testid="tab-2RdhIZRj7BuTDbC2eO2vQp"
                    id="tab-2RdhIZRj7BuTDbC2eO2vQp"
                    role="tab"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiTab-wrapper"
                    />
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </div>
                <span
                  class="PrivateTabIndicator-root-13 PrivateTabIndicator-colorPrimary-14 MuiTabs-indicator"
                  style="left: 0px; width: 0px;"
                />
              </div>
              <div
                aria-disabled="false"
                class="MuiButtonBase-root MuiTabScrollButton-root tabsScrollBtn Mui-disabled"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"
                  />
                </svg>
                <span
                  class="MuiTouchRipple-root"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-labelledby="tab-2RdhIZRj7BuTDbC2eO2vQp"
        class="MuiGrid-root Tabs-TabPanel-5 MuiGrid-item"
        data-testid="tabpanel-2RdhIZRj7BuTDbC2eO2vQp"
        id="tabpanel-2RdhIZRj7BuTDbC2eO2vQp"
        role="tabpanel"
      >
        <div
          class="MuiBox-root MuiBox-root-19 Tabs-TabPanelBox-6"
        >
          <nav
            aria-label="breadcrumbs"
            class="MuiTypography-root MuiBreadcrumbs-root Breadcrumbs-root-20 MuiTypography-body1 MuiTypography-colorTextSecondary"
          >
            <ol
              class="MuiBreadcrumbs-ol"
            >
              <li
                class="MuiBreadcrumbs-li"
              >
                <button
                  class="MuiButtonBase-root MuiButton-root Button-root-28 MuiButton-text Button-text-29 Breadcrumbs-button-22 Breadcrumbs-link-23 MuiButton-textPrimary"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label Button-label-31"
                  >
                    <span
                      class="MuiButton-startIcon Button-startIcon-32 MuiButton-iconSizeMedium"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root Breadcrumbs-icon-24"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
                        />
                      </svg>
                    </span>
                    <span
                      class="Breadcrumbs-label-25"
                    >
                      <div
                        aria-role="button"
                        data-testid="media-path-navigate"
                        role="button"
                      >
                        Megatest
                      </div>
                    </span>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </li>
            </ol>
          </nav>
          <div
            class="mediaGrid"
          >
            <div
              class="meta"
            >
              <h6
                class="MuiTypography-root Typography-root-48 MuiTypography-subtitle2 MuiTypography-displayBlock"
                data-testid="typography"
              >
                countIndicator
              </h6>
            </div>
            <div>
              <div
                class="tiles"
              >
                <div>
                  <div
                    class="content"
                  >
                    <button
                      class="MuiButtonBase-root MuiCardActionArea-root"
                      data-testid="media-tile-element-2"
                      tabindex="0"
                      type="button"
                    >
                      <div
                        class="outlined"
                      >
                        <div
                          class="MuiCardContent-root content"
                        >
                          <div>
                            <iframe
                              class="iframe test"
                              frameborder="0"
                              height="100%"
                              sandbox="allow-scripts allow-same-origin"
                              scrolling="yes"
                              src="https://player.vimeo.com/video/www.vimeo.com?title=0&portrait=0&controls=0&sidedock=0"
                              width="100%"
                            />
                            <div
                              class="playButton"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root MuiSvgIcon-colorPrimary"
                                focusable="false"
                                style="font-size: 2rem; display: block;"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M8 5v14l11-7z"
                                />
                              </svg>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="footer"
                      >
                        <span
                          class="MuiTypography-root title Typography-root-48 MuiTypography-button"
                          data-testid="typography"
                        >
                          mediaTool
                        </span>
                        <span
                          class="MuiTypography-root meta Typography-root-48 MuiTypography-button"
                          data-testid="typography"
                        >
                          contentTypes.VIDEO
                        </span>
                      </div>
                      <span
                        class="MuiCardActionArea-focusHighlight"
                      />
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Media page should render no root folders 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    style=""
  >
    <div>
      <div
        class="Tabs-root-370"
      >
        <div
          class="Tabs-TabsBar-376"
        >
          <div
            class="Container-root-380"
          >
            <div
              class="MuiContainer-root Tabs-ContainerRoot-371"
            >
              <div
                class="MuiTabs-root Tabs-TabsRoot-372"
              >
                <div
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiTabScrollButton-root tabsScrollBtn Mui-disabled"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z"
                    />
                  </svg>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
                <div
                  class="MuiTabs-scrollable"
                  style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
                />
                <div
                  class="MuiTabs-scroller MuiTabs-scrollable"
                  style="margin-bottom: 0px;"
                >
                  <div
                    aria-label="tabs"
                    class="MuiTabs-flexContainer"
                    role="tablist"
                  />
                  <span
                    class="PrivateTabIndicator-root-382 PrivateTabIndicator-colorPrimary-383 MuiTabs-indicator"
                    style="left: 0px; width: 0px;"
                  />
                </div>
                <div
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiTabScrollButton-root tabsScrollBtn Mui-disabled"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"
                    />
                  </svg>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="Tabs-root-370"
    >
      <div
        class="Tabs-TabsBar-376"
      >
        <div
          class="Container-root-380"
        >
          <div
            class="MuiContainer-root Tabs-ContainerRoot-371"
          >
            <div
              class="MuiTabs-root Tabs-TabsRoot-372"
            >
              <div
                aria-disabled="false"
                class="MuiButtonBase-root MuiTabScrollButton-root tabsScrollBtn Mui-disabled"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z"
                  />
                </svg>
                <span
                  class="MuiTouchRipple-root"
                />
              </div>
              <div
                class="MuiTabs-scrollable"
                style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
              />
              <div
                class="MuiTabs-scroller MuiTabs-scrollable"
                style="margin-bottom: 0px;"
              >
                <div
                  aria-label="tabs"
                  class="MuiTabs-flexContainer"
                  role="tablist"
                />
                <span
                  class="PrivateTabIndicator-root-382 PrivateTabIndicator-colorPrimary-383 MuiTabs-indicator"
                  style="left: 0px; width: 0px;"
                />
              </div>
              <div
                aria-disabled="false"
                class="MuiButtonBase-root MuiTabScrollButton-root tabsScrollBtn Mui-disabled"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"
                  />
                </svg>
                <span
                  class="MuiTouchRipple-root"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
